# 2024_ITIS_IS_11-007_SharafievDF

./: go.mod  go.sum  pyproject.toml
1/: index.txt  main.go  main.py
1/downloaded_pages/: index.txt  page_1.txt  page_10.txt  page_100.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_2.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  page_26.txt  page_27.txt  page_28.txt  page_3.txt  page_30.txt  page_31.txt  page_32.txt  page_33.txt  page_34.txt  page_35.txt  page_36.txt  page_37.txt  page_38.txt  page_39.txt  page_4.txt  page_40.txt  page_41.txt  page_42.txt  page_43.txt  page_44.txt  (+60 more)
2/: main.py
2/processed_text/: page_1.txt  page_10.txt  page_100.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_2.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  page_26.txt  page_27.txt  page_28.txt  page_29.txt  page_3.txt  page_30.txt  page_31.txt  page_32.txt  page_33.txt  page_34.txt  page_35.txt  page_36.txt  page_37.txt  page_38.txt  page_39.txt  page_4.txt  page_40.txt  page_42.txt  page_43.txt  page_44.txt  page_45.txt  (+58 more)
3/: 3\inverted_index.txt  3\search_results.txt  main.py  result-софт & программный & обеспечение.txt  result-софт & программный | обеспечение.txt  result-софт | !программный | !обеспечение.txt  results.csv
